--- a/src/index.css
+++ b/src/index.css
@@ -144,5 +144,5 @@ body {
   grid-template-columns: repeat(12, 1fr);
   margin-right: 2vw;
   margin-left: 2vw;
-  grid-column-gap: 1vh;
+  grid-column-gap: 1vw;
 }
