--- a/src/public/css/Partner/Reviews.css
+++ b/src/public/css/Partner/Reviews.css
@@ -14,17 +14,20 @@
 }
 .cards {
   grid-column: 1 / span 12;
+  margin-bottom: 100px;
+  display: flex;
+  flex-direction: row;
+  overflow-x: scroll;
 }
 
 .review-card {
-  width: 50vw;
+  width: 42vw;
+  min-width: 38vw;
   min-height: 36vw;
   border-radius: 30px;
-
-  /* filter: drop-shadow(-4px -4px 50px rgba(0, 0, 0, 0.04))
-    drop-shadow(4px 4px 50px rgba(0, 0, 0, 0.04)); */
   box-shadow: -4px -4px 50px rgba(0, 0, 0, 0.04),
     4px 4px 50px rgba(0, 0, 0, 0.04);
+  margin-right: 50px;
 }
 .review-card img {
   min-width: 150px;
@@ -33,5 +36,43 @@
   height: 10.5vw;
   object-fit: cover;
   border-radius: 50%;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  margin-top: 43px;
+}
+.customer-img-blue {
   border: 4px solid var(--blue);
+}
+.customer-img-orange {
+  border: 4px solid var(--orange);
+}
+.review-card p {
+  width: 100%;
+  text-align: center;
+}
+
+.customer-review {
+  margin-top: 43px;
+  max-width: 70%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.customer-name {
+  margin-bottom: 0;
+}
+.customer-company {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 129%;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.text-orange {
+  color: var(--orange);
+}
+
+.text-blue {
+  color: var(--blue);
 }
