--- a/src/public/css/Home/services.css
+++ b/src/public/css/Home/services.css
@@ -11,7 +11,7 @@
 .services-main-header {
   grid-column: 6/7;
   font-weight: 500;
-  font-size: 3em;
+  font-size: 2.5em;
   margin: 0;
 }
 
@@ -46,17 +46,18 @@
 
 .service-right {
   grid-column: 7 / 11;
+  width: 100%;
 }
 
 .color-orange {
   color: var(--orange);
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 500;
 }
 
 .loading-header {
   margin: -60px 0 0 60px;
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 500;
 }
 
@@ -76,8 +77,8 @@
 }
 
 .service-right .loading-header {
-  margin: -55px 60px 0 0;
-  font-size: 3rem;
+  margin: -45px 55px 0 0;
+  font-size: 2.5rem;
   font-weight: 500;
 }
 .arrowLeft {
@@ -89,4 +90,8 @@
   margin-right: 60px;
   margin-left: 0;
   text-align: right;
+}
+
+.service-right .loading {
+  float: right;
 }
