--- a/src/public/css/Home/gallery.css
+++ b/src/public/css/Home/gallery.css
@@ -27,3 +27,45 @@
   max-height: 32vw;
   border-radius: 14px;
 }
+
+.gallery-carousel {
+  align-items: center;
+  display: flex;
+  margin: 2rem auto;
+  overflow: hidden;
+  position: relative;
+  max-width: 38vw;
+}
+
+.carousel__images {
+  display: flex;
+  transform: translateX(0);
+  transition: transform 0.25s;
+}
+
+.carousel__button {
+  background: teal;
+  border: 0;
+  border-radius: 50%;
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+  height: 1.6rem;
+  opacity: 0.25;
+  position: absolute;
+  transition: opacity 0.25s;
+  width: 1.6rem;
+  z-index: 1;
+}
+
+.previous {
+  left: 5px;
+}
+
+.next {
+  right: 5px;
+}
+
+.carousel__button:hover {
+  opacity: 0.5;
+}
