--- a/src/public/css/navbar.css
+++ b/src/public/css/navbar.css
@@ -7,27 +7,37 @@ nav {
   width: 100vw;
   top: 0;
   left: 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
   background-color: none;
-
+  display: grid;
+  margin-right: 2vw;
+  margin-left: 2vw;
+  grid-column-gap: 1vh;
+  grid-template-columns: repeat(12, 1fr);
   z-index: 100;
 }
 .solid-nav {
   background-color: var(--white);
 }
+
+.nav-logo {
+  grid-column: 3 / span 2;
+}
+
+.nav-items {
+  grid-column: span 4 / 11;
+}
 .nav-items ul {
+  width: 100%;
   padding: 0;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
 }
 
 li a {
   padding: 0 10px;
   font-weight: 700;
   text-decoration: none;
+  color: var(--black);
 }
 
 li a:visited {
