--- a/src/public/css/navbar.css
+++ b/src/public/css/navbar.css
@@ -9,8 +9,6 @@ nav {
   left: 0;
   background-color: none;
   display: grid;
-  margin-right: 2vw;
-  margin-left: 2vw;
   grid-column-gap: 1vh;
   grid-template-columns: repeat(12, 1fr);
   z-index: 100;
@@ -24,7 +22,7 @@ nav {
 }
 
 .nav-items {
-  grid-column: span 4 / 11;
+  grid-column: span 5 / 11;
 }
 .nav-items ul {
   width: 100%;
@@ -50,4 +48,46 @@ li.active a {
 
 li:hover a {
   color: var(--orange);
+}
+
+.Service-Dropdown {
+  grid-column: 8 / span 2;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-around;
+  width: fit-content;
+  /* background-color: var(--white); */
+  background-color: none;
+  font-weight: 700;
+  text-decoration: none;
+  color: var(--black);
+  padding: 10px;
+  border-radius: 0 0 14px 14px;
+}
+
+.extra-class {
+  position: fixed;
+  width: 100vw;
+  top: 55px;
+  left: 0;
+  background-color: none;
+  display: grid;
+  grid-column-gap: 1vh;
+  grid-template-columns: repeat(12, 1fr);
+  z-index: 100;
+  height: 10vh;
+}
+
+.Service-Dropdown a {
+  text-decoration: none;
+  color: var(--black);
+}
+
+.Service-Dropdown a:hover {
+  color: var(--orange);
+}
+
+.Service-Dropdown a:visited {
+  color: var(--black);
 }
