Control Panel 60% done

--- a/src/public/css/Login/login.css
+++ b/src/public/css/Login/login.css
@@ -116,7 +116,7 @@ canvas {
 	line-height: 1.7vw;
 	border-width:thin;
 	border-color:#00B4D8;
-	font-family: Sofia Pro;
+	font-family: SophiaPro;
 font-style: normal;
 font-weight: normal;
 	text-align: center;
