--- a/src/public/css/navbar.css
+++ b/src/public/css/navbar.css
@@ -12,6 +12,7 @@ nav {
   grid-column-gap: 1vh;
   grid-template-columns: repeat(12, 1fr);
   z-index: 100;
+  border-bottom: 1px solid var(--blue);
 }
 .solid-nav {
   background-color: var(--white);
@@ -64,18 +65,21 @@ li:hover a {
   color: var(--black);
   padding: 10px;
   border-radius: 0 0 14px 14px;
+  border-right: 2px solid var(--blue);
+  border-left: 2px solid var(--blue);
+  border-bottom: 2px solid var(--blue);
 }
 
 .extra-class {
   position: fixed;
   width: 100vw;
-  top: 55px;
+  top: 47px;
   left: 0;
   background-color: none;
   display: grid;
   grid-column-gap: 1vh;
   grid-template-columns: repeat(12, 1fr);
-  z-index: 100;
+  z-index: 101;
   height: 10vh;
 }
 
@@ -90,4 +94,8 @@ li:hover a {
 
 .Service-Dropdown a:visited {
   color: var(--black);
+}
+
+.Service-Dropdown hr {
+  margin: 0;
 }
