--- a/src/public/css/Dashboard/MyProfile.css
+++ b/src/public/css/Dashboard/MyProfile.css
@@ -124,9 +124,9 @@
 
 .Profile_PersonalInfo{
 	position: absolute;
-	top: 0.2vw;
+	top: 2vw;
 	width: 45.27vw;
-	max-height: 47vw;
+	height: 46vw;
 	margin-left: 26.9vw;
 	background: #F6F6F5;
 	border-radius: 3.33vw;
