--- a/src/public/css/navbar.css
+++ b/src/public/css/navbar.css
@@ -99,3 +99,11 @@ li:hover a {
 .Service-Dropdown hr {
   margin: 0;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .nav-items {
+    display: none;
+  }
+
+  
+}
