--- a/src/public/css/navbar.css
+++ b/src/public/css/navbar.css
@@ -104,6 +104,10 @@ li:hover a {
   .nav-items {
     display: none;
   }
+}
 
-  
+@media screen and (max-width: 768px) {
+  .nav-items {
+    display: none;
+  }
 }
