--- a/src/public/css/Home/contact.css
+++ b/src/public/css/Home/contact.css
@@ -1,26 +1,23 @@
 .contact-header {
   width: 100%;
   height: auto;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
+  display: block;
+
   margin-right: 2vw;
   margin-left: 2vw;
-  grid-column-gap: 1vh;
   margin-top: 75px;
+  text-align: center;
 }
 
 .contact-main-header {
   grid-column: 6 / 9;
   font-weight: 500;
-  font-size: 3em;
-  margin: 0;
-  margin-left: -70px;
+  font-size: 2.5rem;
 }
 
 .contact-header-img {
-  grid-column: 6;
-  margin-left: -100px;
   margin-bottom: -24px;
+  margin-left: -350px;
 }
 
 .contact-form {
