--- a/src/public/css/Home/landing.css
+++ b/src/public/css/Home/landing.css
@@ -24,16 +24,17 @@
 
 .landing h1 {
   font-weight: 700;
-  font-size: 5.33rem;
+  font-size: 5rem;
   color: white;
   margin: 0;
   margin-top: 25vh;
-  grid-column: 2 / 4;
+  grid-column: 2 / 8;
+  width: 100%;
 }
 
 .landing p {
   color: white;
-  grid-column: 2 / 6;
+  grid-column: 2 / 8;
 }
 .header-orange {
   color: var(--orange);
