--- a/src/public/css/Dashboard/Attendance.css
+++ b/src/public/css/Dashboard/Attendance.css
@@ -109,4 +109,129 @@
 	margin-top:0.5vw;
 	margin-bottom:0.5vw;
 	margin-left:12vw;
+	cursor:pointer;
+}
+
+.AttendanceTableDiv{
+	width: 69.5vw;
+	height: fit-content;
+	margin-left:2.7vw;
+	overflow-x:auto;
+	margin-bottom:2vw;
+}
+
+/* .AttendanceTableDiv ::-webkit-scrollbar {
+   background: #F3752B;
+   border-radius: 0.5vw;
+}
+
+.AttendanceTableDiv ::-webkit-scrollbar-track {
+    background: #F3752B;
+   border-radius: 0.5vw;
+}
+
+.AttendanceTableDiv ::-webkit-scrollbar-thumb {
+    background: #F3752B;
+   border-radius: 0.5vw;
+} */
+
+.AttendanceTable{
+	width: 69.5vw;
+height: fit-content;
+/* margin-left:2.7vw; */
+	background:#ffffff;
+	overflow-x:auto;
+}
+
+.AttendanceRow1{
+	background:#E9E9E9;
+}
+.AttendanceRow2{
+	background:#F6F6F5;
+}
+.AttendanceCell{
+	height:fit-content;
+	width:fit-content;
+	padding-bottom:1.5vw;
+	padding-top:1.5vw;
+	align-content:center;
+	text-align:center;
+	padding-left:0.7vw;
+	padding-right:1.4vw;
+}
+
+.AttendanceUserDelete{
+	position:absolute;
+	width:1vw;
+	height:1vw;
+	cursor:pointer;
+	top:0vw;
+    right:0vw;
+}
+
+.AttendanceUserDonwload{
+	position:absolute;
+	width:1vw;
+	height:1vw;
+	cursor:pointer;
+	bottom:0vw;
+	right:0vw;
+}
+
+/* .AttendanceUserDelete {
+	position:absolute;
+	top:0;
+	left:90%;
+  overflow: hidden;
+  position: relative;
+  border: none;
+  padding: 0;
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+  background: transparent;
+  color: #1da1f2;
+  font: inherit;
+  text-indent: 100%;
+  cursor: pointer;
+}
+.AttendanceUserDelete:focus {
+  outline: solid 0 transparent;
+  box-shadow: 0 0 0 2px #8ed0f9;
+}
+.AttendanceUserDelete:hover {
+  background: rgba(29, 161, 142, 0.1);
+}
+.AttendanceUserDelete:before, #close:after {
+  position: absolute;
+  top: 15%;
+  left: calc(50% - 0.0625em);
+  width: 0.125em;
+  height: 70%;
+  border-radius: 0.125em;
+  transform: rotate(45deg);
+  background: currentcolor;
+  content: "";
+}
+.AttendanceUserDelete:after {
+  transform: rotate(-45deg);
+} */
+
+.AttendanceDownload{
+	width:fit-content;
+	height:fit-content;
+	background: #F3752B;
+	border-radius: 0.7vw;
+	padding:0.7vw;
+	/* padding-top:0.2vw; */
+	font-family: SophiaPro;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 1vw;
+	line-height: 1.2vw;
+	/* align-items: center; */
+	color: #FFFFFF;
+	margin-left:60vw;
+	cursor:pointer;
+	
 }
