--- a/src/public/css/Dashboard/ServiceRequest/request.css
+++ b/src/public/css/Dashboard/ServiceRequest/request.css
@@ -137,9 +137,11 @@
   /* background-color: #f6f6f5; */
   height: 5vh;
 }
+
 .order-table-row:nth-child(even) {
   background-color: #f6f6f5;
 }
+
 .order-table-row li {
   display: flex;
   flex-direction: row;
@@ -152,6 +154,7 @@
 .order-table-row li img {
   height: 15px;
 }
+
 .order-details {
   height: 17vh;
   background-color: #e9e9e9;
@@ -163,6 +166,7 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
 .order-details-content {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -174,4 +178,73 @@
   flex-direction: column;
   justify-content: space-between;
   padding-bottom: 15px;
+}
+
+.invoice-list {
+  width: 68vw;
+  margin: 10px auto;
+  background-color: #e9e9e9;
+  border-radius: 10px;
+  height: 27vh;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.invoice-table {
+  display: flex;
+  flex-direction: column;
+  height: 21vh;
+  border-radius: 10px;
+  margin-top: 10px;
+}
+
+.invoice-table-header {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  background-color: #f6f6f5;
+  height: 6vh;
+}
+
+.invoice-table-header li {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 6vh;
+}
+
+.invoice-table-rows {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  overflow-y: scroll;
+}
+
+.invoice-table-row {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  /* background-color: #f6f6f5; */
+}
+
+.invoice-table-row:nth-child(even) {
+  background-color: #f6f6f5;
+}
+
+.invoice-table-row li {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 7vh;
+  padding-bottom: 10px;
+  text-align: center;
+}
+
+.invoice-table-row .invoice-address {
+  font-size: 0.75rem;
 }
