--- a/src/public/css/Dashboard/Attendance.css
+++ b/src/public/css/Dashboard/Attendance.css
@@ -58,7 +58,7 @@
 }
 
 .dateInputInput{
-	width: 8.2vw;
+	width: fit-content;
 	height: 2.7vw;
 	background: #F6F6F5;
 	border-radius: 0.7vw;
@@ -75,7 +75,7 @@
 .dateButton{
 	width: 2vw;
   height: 2vw;
-  background: url("https://raw.githubusercontent.com/Nikitha2309/Private/main/Group%2034065.png?token=APXZ46PFRECN2SWDO6BRJTTBTFDFK")
+  background: url("https://raw.githubusercontent.com/Nikitha2309/Private/main/Group%2034065.png?token=APXZ46LJ7FLTUBO5LMP7MEDBWIQ7K")
     no-repeat;
   background-size: contain;
 }
