--- a/src/public/css/Dashboard/Diesel.css
+++ b/src/public/css/Dashboard/Diesel.css
@@ -35,6 +35,7 @@
 	padding-bottom:3vw;
 	padding-left:2vw;
 	padding-right:2vw;
+	padding-top:0.75vw;
 	margin-bottom:-1vw;
 }
 
@@ -104,4 +105,21 @@
 	padding:0.76vw;
 	padding-right:1vw;
 	height:fit-content;
+}
+
+.Diesel_Card_Nums{
+	padding: 1vw;
+	margin-top: 2vw;
+	width:fit-content;
+	height:fit-content;
+	
+	background:#F3752B;
+	color:#ffffff;
+	font-family: SophiaPro;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 1.11vw;
+	line-height: 1.3vw;
+	align-items: center;
+	border-radius: 0.74vw;
 }
