--- a/src/public/css/Service/LastMile/Content.css
+++ b/src/public/css/Service/LastMile/Content.css
@@ -33,3 +33,68 @@
 .lastmile-content p {
   margin-left: 60px;
 }
+
+@media screen and (min-width: 700px) and (max-width: 1024px) {
+  .service-page-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .lastmile-content {
+    text-align: center;
+  }
+
+  .lastmile-content img {
+    display: none;
+  }
+
+  .lastmile-heading {
+    margin: 0;
+    font-size: 3rem;
+    font-weight: 500;
+  }
+
+  .lastmile-heading span {
+    font-size: 3rem;
+    font-weight: 500;
+  }
+
+  .lastmile-content p {
+    margin: 0 0 30px 0;
+  }
+}
+
+@media screen and (max-width: 699px) {
+  .service-page-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .lastmile-content {
+    text-align: center;
+  }
+
+  .lastmile-content img {
+    display: none;
+  }
+
+  .lastmile-content .lastmile-heading {
+    margin: 0;
+    font-size: 3rem;
+    font-weight: 500;
+  }
+
+  .lastmile-heading span {
+    font-size: 3rem;
+    font-weight: 500;
+  }
+
+  .lastmile-content p {
+    margin: 30px 0 30px 0;
+    font-size: 0.75rem;
+  }
+}
