--- a/src/public/css/About/Team.css
+++ b/src/public/css/About/Team.css
@@ -31,15 +31,16 @@
 .team-card {
   max-width: 30vw;
   min-width: 400px;
-  max-height: 35vw;
+  max-height: 40vw;
   min-height: 420px;
   box-shadow: -4px -4px 50px rgba(0, 0, 0, 0.04),
     4px 4px 50px rgba(0, 0, 0, 0.04);
   border-radius: 30px;
-
   display: flex;
   flex-direction: column;
   padding: 25px;
+  margin-bottom: 50px;
+  align-items: center;
 }
 
 .team-card img {
@@ -55,6 +56,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  width: 100%;
 }
 
 .card-top p {
@@ -77,6 +79,11 @@
   padding-left: 25px;
   padding-right: 25px;
   font-weight: 300;
+  width: 90%;
+  margin-top: 30px;
+  font-size: 0.9em;
+  line-height: 1.5em;
+  letter-spacing: 0.02em;
 }
 
 .border-orange {
